# capacitacaoROS

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: sim.launch.py
msg/: DroneStatus.msg
sim_drone/: drone_node.py  lidar_node.py  obstaculo.py
